隐藏评论按钮

--- a/addons/hulu_like/template/mobile/talk_list.html
+++ b/addons/hulu_like/template/mobile/talk_list.html
@@ -76,6 +76,9 @@ $pic=getpicture($_W['uniacid'],$talk['talk_id'],'talk');
 
 <div class="talk_list_right_3_a">{php echo getgaptime($talk['talk_time']);}</div>
 
+ <div class="talk_list_right_3_b">
+ </div>
+
 <a href="{php echo $this->createMobileUrl('dashang',array('type'=>'2','talk_id'=>$talk['talk_id'],'receive'=>$talk['openid']));}">
 <div class="talk_list_right_3_b">
 <div class="talk_list_right_3_b_style">
@@ -90,14 +93,6 @@ $pic=getpicture($_W['uniacid'],$talk['talk_id'],'talk');
 <div class="talk_list_right_3_b_pic"><div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/zan.png"/></div></div>
 <div class="talk_list_right_3_b_p">赞</div>
 <div class="talk_list_right_3_b_n" id="talk_list_zan_{$talk['talk_id']}">{php echo gettalkzannum($_W['uniacid'],$talk['talk_id']);}</div>
-</div>
-</div>
-
-<div onclick="pinglun('{$talk['talk_id']}');" class="talk_list_right_3_b">
-<div class="talk_list_right_3_b_style">
-<div class="talk_list_right_3_b_pic"><div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/pinglun.png"/></div></div>
-<div class="talk_list_right_3_b_p">评论</div>
-<div class="talk_list_right_3_b_n" id="talk_list_ping_{$talk['talk_id']}">{php echo gettalkpinglunnum($_W['uniacid'],$talk['talk_id']);}</div>
 </div>
 </div>
 
