隐藏评论按钮

--- a/addons/hulu_like/template/mobile/user.html
+++ b/addons/hulu_like/template/mobile/user.html
@@ -57,7 +57,7 @@
             </div>
             -->
             <div class="distance" style="display:none;">{$user['uid']},{$user['address']}</div>
-            <div class="user_list_c_4">{php echo getgaptime($user['login_time']);}</div>
+            <!--<div class="user_list_c_4">{php echo getgaptime($user['login_time']);}</div>-->
         </div>
 
 
