--- a/addons/hulu_like/template/mobile/share.html
+++ b/addons/hulu_like/template/mobile/share.html
@@ -1,5 +1,5 @@
 {template 'header'}
- <link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/share.css">
+<link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/share.css">
 <script type="text/Javascript" src="{MODULE_URL}public/jquery.min.js"></script>
 
 <!--顶部菜单导航开始-->
@@ -7,108 +7,114 @@
 <!--顶部菜单导航结束-->
 
 
-<div id="share_title"><div class="share_title_p">数据统计</div></div>
+<div id="share_title">
+    <div class="share_title_p">数据统计</div>
+</div>
 
 <!--开始-->
 <div id="share_one">
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">推广人数</div>
-<div class="share_one_p2">{$one}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">推广人数</div>
+            <div class="share_one_p2">{$one}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">可领佣金</div>
-<div class="share_one_p2">{$two}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">可领佣金</div>
+            <div class="share_one_p2">{$two}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">总共佣金</div>
-<div class="share_one_p2">{$three}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">总共佣金</div>
+            <div class="share_one_p2">{$three}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
 </div>
 <!--结束-->
 
-<div id="share_title"><div class="share_title_p">新增推广人数</div></div>
+<div id="share_title">
+    <div class="share_title_p">新增推广人数</div>
+</div>
 
 <!--开始-->
 <div id="share_one">
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">今天推广</div>
-<div class="share_one_p2">{$four}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">今天推广</div>
+            <div class="share_one_p2">{$four}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">3天推广</div>
-<div class="share_one_p2">{$five}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">3天推广</div>
+            <div class="share_one_p2">{$five}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">7天推广</div>
-<div class="share_one_p2">{$six}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">7天推广</div>
+            <div class="share_one_p2">{$six}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
 </div>
 <!--结束-->
 
 
-<div id="share_title"><div class="share_title_p">新增充值金额</div></div>
+<div id="share_title">
+    <div class="share_title_p">新增充值金额</div>
+</div>
 
 <!--开始-->
 <div id="share_one">
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">今天充值</div>
-<div class="share_one_p2">{$seven}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">今天充值</div>
+            <div class="share_one_p2">{$seven}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">昨天充值</div>
-<div class="share_one_p2">{$eight}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">昨天充值</div>
+            <div class="share_one_p2">{$eight}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
-<div class="share_one_style">
-<div class="share_one_p">
-<div class="share_one_p1">历史充值</div>
-<div class="share_one_p2">{$nine}</div>
-<div class="share_one_up1"></div>
-<div class="share_one_up2"></div>
-</div>
-</div>
+    <div class="share_one_style">
+        <div class="share_one_p">
+            <div class="share_one_p1">历史充值</div>
+            <div class="share_one_p2">{$nine}</div>
+            <div class="share_one_up1"></div>
+            <div class="share_one_up2"></div>
+        </div>
+    </div>
 
 </div>
 <!--结束-->
