--- a/addons/hulu_like/template/mobile/talk_list.html
+++ b/addons/hulu_like/template/mobile/talk_list.html
@@ -1,143 +1,193 @@
 <div id="talk_list_style">
 
 
-<!--说说昵称开始-->
-<a href="{php echo $this->createMobileUrl(view,array('vid'=>getuid($_W['uniacid'],$talk['openid'])));}">
-<div class="talk_list_left">
+    <!--说说昵称开始-->
+    <a href="{php echo $this->createMobileUrl(view,array('vid'=>getuid($_W['uniacid'],$talk['openid'])));}">
+        <div class="talk_list_left">
 
-<div class="talk_list_left_pic">
-<div class="talk_list_left_pic_img">
-{php $img = getImg($_W['uniacid'],$talk['openid']);}
- {if empty($img)}
-<img src="{php echo getavatar($_W['uniacid'],$talk['openid']);}"/>
-{else}
-<img src="{php echo $_W['attachurl'].$img;}"/>
-{/if}
+            <div class="talk_list_left_pic">
+                <div class="talk_list_left_pic_img">
+                    {php $img = getImg($_W['uniacid'],$talk['openid']);}
+                    {if empty($img)}
+                    <img src="{php echo getavatar($_W['uniacid'],$talk['openid']);}"/>
+                    {else}
+                    <img src="{php echo $_W['attachurl'].$img;}"/>
+                    {/if}
 
-</div>
-</div>
+                </div>
+            </div>
 
-<div class="talk_list_left_p1">
-{php echo getnickname($_W['uniacid'],$talk['openid']);}
-</div>
+            <div class="talk_list_left_p1">
+                {php echo getnickname($_W['uniacid'],$talk['openid']);}
+            </div>
 
-<div class="talk_list_left_p2">
-{php echo getmemberinfo($_W['uniacid'],$talk['openid']);}
-</div>
+            <div class="talk_list_left_p2">
+                {php echo getmemberinfo($_W['uniacid'],$talk['openid']);}
+            </div>
 
-</div>
-</a>
-<!--说说昵称结束-->
+        </div>
+    </a>
+    <!--说说昵称结束-->
 
 
-<!--说说正文开始-->
-<div class="talk_list_right">
+    <!--说说正文开始-->
+    <div class="talk_list_right">
 
-<!--说说内容开始-->
-<a href="javascript:;{php //echo $this->createMobileUrl('talk_view',array('vid'=>$talk['talk_id']));}">
-<div class="talk_list_right_1">{php echo $chat_num_replace != '' ? chat_num_replace($talk['talk_content'],$chat_num_replace) : $talk['talk_content'];}</div>
-</a>
-<!--说说内容结束-->
+        <!--说说内容开始-->
+        <a href="javascript:;{php //echo $this->createMobileUrl('talk_view',array('vid'=>$talk['talk_id']));}">
+            <div class="talk_list_right_1">{php echo $chat_num_replace != '' ?
+                chat_num_replace($talk['talk_content'],$chat_num_replace) : $talk['talk_content'];}
+            </div>
+        </a>
+        <!--说说内容结束-->
 
-<!--说说图片开始-->
-<?php
+        <!--说说图片开始-->
+        <?php
 $pic=getpicture($_W['uniacid'],$talk['talk_id'],'talk');
 ?>
-{if (empty($talk['talk_pic1']))&&(empty($talk['talk_pic2']))&&(empty($talk['talk_pic3']))&&(empty($pic))}
-{else}
+        {if (empty($talk['talk_pic1']))&&(empty($talk['talk_pic2']))&&(empty($talk['talk_pic3']))&&(empty($pic))}
+        {else}
 
 
-<div id="talk_list_right_2_{$talk['talk_id']}" class="talk_list_right_2">
+        <div id="talk_list_right_2_{$talk['talk_id']}" class="talk_list_right_2">
 
-{loop getpicture($_W['uniacid'],$talk['talk_id'],'talk') $key $picture}
-{if image_exists($_W['attachurl'].$picture)}
-<div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$picture}"/></div>
-{/if}
-{/loop}
+            {loop getpicture($_W['uniacid'],$talk['talk_id'],'talk') $key $picture}
+            {if image_exists($_W['attachurl'].$picture)}
+            <div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$picture}"/></div>
+            {/if}
+            {/loop}
 
-{if (!empty($talk['talk_pic1']))}<div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic1']}"/></div>{/if}
-{if (!empty($talk['talk_pic2']))}<div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic2']}"/></div>{/if}
-{if (!empty($talk['talk_pic3']))}<div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic3']}"/></div>{/if}
+            {if (!empty($talk['talk_pic1']))}
+            <div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic1']}"/></div>
+            {/if}
+            {if (!empty($talk['talk_pic2']))}
+            <div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic2']}"/></div>
+            {/if}
+            {if (!empty($talk['talk_pic3']))}
+            <div class="talk_list_right_2_pic"><img src="{$_W['attachurl']}{$talk['talk_pic3']}"/></div>
+            {/if}
+        </div>
+
+        {/if}
+        <!--说说图片结束-->
+
+        {if $talk['talk_weizhi']=='1'}
+        <a href="javascript:;"
+           onclick="show_map('{php echo $this->createMobileUrl('weizhi',array('type'=>'talk','vid'=>$talk['talk_id']));}');">
+            <div class="talk_list_right_weizhi">
+                <div class="talk_list_right_weizhi_left">
+                    <div class="talk_list_right_weizhi_pic"><img src="{MODULE_URL}public/images/ditu1.png"/></div>
+                </div>
+                <div class="talk_list_right_weizhi_right">{$talk['talk_address']}</div>
+            </div>
+        </a>
+        {/if}
+
+        <div class="talk_list_right_3">
+
+            <div class="talk_list_right_3_a">{php echo getgaptime($talk['talk_time']);}</div>
+
+            <div class="talk_list_right_3_b">
+            </div>
+
+            <a href="{php echo $this->createMobileUrl('dashang',array('type'=>'2','talk_id'=>$talk['talk_id'],'receive'=>$talk['openid']));}">
+                <div class="talk_list_right_3_b">
+                    <div class="talk_list_right_3_b_style">
+                        <div class="talk_list_right_3_b_pic">
+                            <div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/dashang.png"/>
+                            </div>
+                        </div>
+                        <div class="talk_list_right_3_b_p">赏</div>
+                    </div>
+                </div>
+            </a>
+
+            <div onclick="dianzan('{$talk['talk_id']}');" class="talk_list_right_3_b">
+                <div class="talk_list_right_3_b_style">
+                    <div class="talk_list_right_3_b_pic">
+                        <div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/zan.png"/></div>
+                    </div>
+                    <div class="talk_list_right_3_b_p">赞</div>
+                    <div class="talk_list_right_3_b_n" id="talk_list_zan_{$talk['talk_id']}">{php echo
+                        gettalkzannum($_W['uniacid'],$talk['talk_id']);}
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+
+        <!--说说评论开始-->
+        <div class="talk_list_pinglun" id="talk_list_pinglun_{$talk['talk_id']}">
+            {loop gettalkpinglun($_W['uniacid'],$talk['talk_id']) $key $pinglun}
+            <div class="talk_list_pinglun_style">
+                <div class="talk_list_pinglun_avatar">
+                    <img src="{php echo getavatar($_W['uniacid'],$pinglun['openid']);}"/>
+                </div>
+                <div onclick="alert('{$pinglun['pinglun_content']}');" class="talk_list_pinglun_p">
+                    {$pinglun['pinglun_content']}
+                </div>
+            </div>
+            {/loop}
+        </div>
+
+        <!--说说评论结束-->
+
+        {if ($talk['openid']==$_W['openid'])&&($_GPC['do']=='talk_my')}<a
+            href="{php echo $this->createMobileUrl('talk_del',array('talk_id'=>$talk['talk_id']));}">
+        <div class="talk_list_del">
+            <div class="talk_list_del_pic"><img src="{MODULE_URL}public/images/trash.png"/></div>
+        </div>
+    </a>{/if}
+
+    </div>
+    <!--说说正文结束-->
+
 </div>
-
-{/if}
-<!--说说图片结束-->
-
-{if $talk['talk_weizhi']=='1'}
-<a href="javascript:;" onclick="show_map('{php echo $this->createMobileUrl('weizhi',array('type'=>'talk','vid'=>$talk['talk_id']));}');">
-<div class="talk_list_right_weizhi">
-<div class="talk_list_right_weizhi_left"><div class="talk_list_right_weizhi_pic"><img src="{MODULE_URL}public/images/ditu1.png"/></div></div>
-<div class="talk_list_right_weizhi_right">{$talk['talk_address']}</div>
-</div>
-</a>
-{/if}
-
-<div class="talk_list_right_3">
-
-<div class="talk_list_right_3_a">{php echo getgaptime($talk['talk_time']);}</div>
-
- <div class="talk_list_right_3_b">
- </div>
-
-<a href="{php echo $this->createMobileUrl('dashang',array('type'=>'2','talk_id'=>$talk['talk_id'],'receive'=>$talk['openid']));}">
-<div class="talk_list_right_3_b">
-<div class="talk_list_right_3_b_style">
-<div class="talk_list_right_3_b_pic"><div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/dashang.png"/></div></div>
-<div class="talk_list_right_3_b_p">赏</div>
-</div>
-</div>
-</a>
-
-<div onclick="dianzan('{$talk['talk_id']}');" class="talk_list_right_3_b">
-<div class="talk_list_right_3_b_style">
-<div class="talk_list_right_3_b_pic"><div class="talk_list_right_3_b_pic_img"><img src="{MODULE_URL}public/images/zan.png"/></div></div>
-<div class="talk_list_right_3_b_p">赞</div>
-<div class="talk_list_right_3_b_n" id="talk_list_zan_{$talk['talk_id']}">{php echo gettalkzannum($_W['uniacid'],$talk['talk_id']);}</div>
-</div>
-</div>
-
-
-</div>
-
-
-<!--说说评论开始-->
-<div class="talk_list_pinglun" id="talk_list_pinglun_{$talk['talk_id']}">
-{loop gettalkpinglun($_W['uniacid'],$talk['talk_id']) $key $pinglun}
-<div class="talk_list_pinglun_style">
-<div class="talk_list_pinglun_avatar">
-<img src="{php echo getavatar($_W['uniacid'],$pinglun['openid']);}"/>
-</div>
-<div onclick="alert('{$pinglun['pinglun_content']}');" class="talk_list_pinglun_p">
-{$pinglun['pinglun_content']}
-</div>
-</div>
-{/loop}
-</div>
-
-<!--说说评论结束-->
-
-{if ($talk['openid']==$_W['openid'])&&($_GPC['do']=='talk_my')}<a href="{php echo $this->createMobileUrl('talk_del',array('talk_id'=>$talk['talk_id']));}">
-<div class="talk_list_del"><div class="talk_list_del_pic"><img src="{MODULE_URL}public/images/trash.png"/></div></div>
-</a>{/if}
-
-</div>
-<!--说说正文结束-->
-
- </div>
 
 <?php $user_pics = getpicture($_W['uniacid'],$talk['talk_id'],'talk');?>
 
 {if $user_pics}
- <script>
-   document.querySelector('#talk_list_right_2_{$talk['talk_id']}').onclick = function () {
-    wx.previewImage({
-      current: '',
-      urls: [
-	  {loop $user_pics $key $picture}'<?php echo $_W['attachurl'].$picture;?>',{/loop}
-	  {if (!empty($talk['talk_pic1']))}'{$_W['attachurl']}{$talk['talk_pic1']}',{else}{/if}
-	  {if (!empty($talk['talk_pic2']))}'{$_W['attachurl']}{$talk['talk_pic2']}',{else}{/if}
-	  {if (!empty($talk['talk_pic3']))}'{$_W['attachurl']}{$talk['talk_pic3']}',{else}{/if}
-      ]
-    });
-  };
- </script>{/if}
+<script>
+    document.querySelector('#talk_list_right_2_{$talk['
+    talk_id
+    ']}'
+    ).onclick = function () {
+        wx.previewImage({
+            current: '',
+            urls: [
+                {loop $user_pics $key $picture}'<?php echo $_W['attachurl'].$picture;?>', {/loop}
+                {if(!empty($talk['talk_pic1']))
+    }
+        '{$_W['
+        attachurl
+        ']}{$talk['
+        talk_pic1
+        ']}', {else}
+        {
+            /if}
+            {
+                if (!empty($talk['talk_pic2']))}
+            '{$_W['
+            attachurl
+            ']}{$talk['
+            talk_pic2
+            ']}', {else}
+            {
+                /if}
+                {
+                    if (!empty($talk['talk_pic3']))}
+                '{$_W['
+                attachurl
+                ']}{$talk['
+                talk_pic3
+                ']}', {else}
+                {
+                    /if}
+                ]
+                }
+            )
+        ;
+    };
+</script>{/if}
