--- a/addons/hulu_like/template/mobile/view.html
+++ b/addons/hulu_like/template/mobile/view.html
@@ -246,7 +246,7 @@ $(".view_top_c_2").html("已喜欢");
 </div>
 
 <div class="view_two_style">
-<div class="view_two_a">城市</div><div class="view_two_b">{$member['member_province']}{$member['member_city']}{$member['member_district']}</div>
+<div class="view_two_a">城市</div><div class="view_two_b"><?php echo getCity($_W['clientip']);?>{$member['member_province']}{$member['member_city']}{$member['member_district']}</div>
 </div>
 
 <div class="view_two_style">
