--- a/addons/hulu_like/template/mobile/real.html
+++ b/addons/hulu_like/template/mobile/real.html
@@ -1,5 +1,5 @@
 {template 'header'}
-  <link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/real.css">
+<link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/real.css">
 <script type="text/javascript" src="{MODULE_URL}public/jquery.min.js"></script>
 
 <!--顶部菜单导航开始-->
@@ -9,45 +9,49 @@
 <!--顶部菜单导航结束-->
 
 <div id="real_one">
-<form action="" method="POST">
+    <form action="" method="POST">
 
-<div id="real_one_style">
-<div class="real_one_a"><input id="real_one_a_input" type="number" name="real_tel" placeholder="请输入手机号码" required="required"/></div>
-<div class="real_one_b"><div class="real_one_b_p">发送</div></div>
-</div>
+        <div id="real_one_style">
+            <div class="real_one_a"><input id="real_one_a_input" type="number" name="real_tel" placeholder="请输入手机号码"
+                                           required="required"/></div>
+            <div class="real_one_b">
+                <div class="real_one_b_p">发送</div>
+            </div>
+        </div>
 
-<div id="real_one_style">
-<div class="real_one_c"><input type="number" name="real_code" placeholder="请输入验证码" required="required"/></div>
-</div>
+        <div id="real_one_style">
+            <div class="real_one_c"><input type="number" name="real_code" placeholder="请输入验证码" required="required"/>
+            </div>
+        </div>
 
-{if $make['look_user_tel_type']==1}
-{template 'picture_upload'}
-{/if}
-<div id="real_one_style">
-<div class="real_one_d"><input type="submit" name="submit" value="验 证"/></div>
-</div>
+        {if $make['look_user_tel_type']==1}
+        {template 'picture_upload'}
+        {/if}
+        <div id="real_one_style">
+            <div class="real_one_d"><input type="submit" name="submit" value="验 证"/></div>
+        </div>
 
-<input type="hidden" name="token" value="{$_W['token']}"/>
-</form>
+        <input type="hidden" name="token" value="{$_W['token']}"/>
+    </form>
 </div>
 
 
 <script>
-$(document).ready(function(){
-  $(".real_one_b_p").click(function(){
-	  var tel = $("#real_one_a_input").val();
-    $.post("{php echo $this->createMobileUrl('real_tel');}",
-    {
+    $(document).ready(function () {
+        $(".real_one_b_p").click(function () {
+            var tel = $("#real_one_a_input").val();
+            $.post("{php echo $this->createMobileUrl('real_tel');}",
+                {
 
-      real_tel:tel,
-	  real_code:"{$authcode}",
-    },
-    function(data,status){
-      $(".real_one_b_p").html('已发送');
-	  alert(data);
+                    real_tel: tel,
+                    real_code: "{$authcode}",
+                },
+                function (data, status) {
+                    $(".real_one_b_p").html('已发送');
+                    alert(data);
+                });
+        });
     });
-  });
-});
 </script>
 
 {template 'foot'}
