--- a/addons/hulu_like/template/mobile/request.html
+++ b/addons/hulu_like/template/mobile/request.html
@@ -1,5 +1,5 @@
 {template 'header'}
-    <link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/request.css">
+<link rel="stylesheet" type="text/css" href="{MODULE_URL}template/mobile/style/request.css">
 
 <script type="text/javascript" src="{MODULE_URL}public/jquery.min.js"></script>
 <script type="text/javascript" src="{MODULE_URL}template/mobile/style/request.js"></script>
@@ -10,77 +10,91 @@
 
 <div id="input_two">
 
-<form action="" method="POST">
+    <form action="" method="POST">
 
-<div id="input_two_style">
-<div class="input_two_a">年龄范围<span>*</span></div>
-<div class="input_two_b">
-<div class="input_two_b_1"><input type="number" id="request_age_small" name="request_age_small" placeholder="请输入最小年龄" required="required" value="{$request['request_age_small']}"/></div>
-<div class="input_two_b_2"><input type="number" id="request_age_big" name="request_age_big" placeholder="请输入最大年龄" required="required" value="{$request['request_age_big']}"/></div>
-</div>
-</div>
+        <div id="input_two_style">
+            <div class="input_two_a">年龄范围<span>*</span></div>
+            <div class="input_two_b">
+                <div class="input_two_b_1">
+                    <input type="number" id="request_age_small" name="request_age_small"
+                           placeholder="请输入最小年龄" required="required" value="{$request['request_age_small']}"/>
+                </div>
+                <div class="input_two_b_2">
+                    <input type="number" id="request_age_big" name="request_age_big"
+                           placeholder="请输入最大年龄" required="required" value="{$request['request_age_big']}"/>
+                </div>
+            </div>
+        </div>
 
-<div id="input_two_style">
-<div class="input_two_a">身高范围<span>*</span></div>
-<div class="input_two_b">
-<div class="input_two_b_1"><input type="number" id="request_height_small" name="request_height_small" placeholder="请输入最矮身高" required="required" value="{$request['request_height_small']}"/></div>
-<div class="input_two_b_2"><input type="number" id="request_height_big" name="request_height_big" placeholder="请输入最高身高" required="required" value="{$request['request_height_big']}"/></div>
-</div>
-</div>
+        <div id="input_two_style">
+            <div class="input_two_a">身高范围<span>*</span></div>
+            <div class="input_two_b">
+                <div class="input_two_b_1"><input type="number" id="request_height_small" name="request_height_small"
+                                                  placeholder="请输入最矮身高" required="required"
+                                                  value="{$request['request_height_small']}"/></div>
+                <div class="input_two_b_2"><input type="number" id="request_height_big" name="request_height_big"
+                                                  placeholder="请输入最高身高" required="required"
+                                                  value="{$request['request_height_big']}"/></div>
+            </div>
+        </div>
 
-<div id="input_two_style">
-<div class="input_two_a">体重范围<span>*</span></div>
-<div class="input_two_b">
-<div class="input_two_b_1"><input type="number" id="request_weight_small" name="request_weight_small" placeholder="请输入最轻体重" required="required" value="{$request['request_weight_small']}"/></div>
-<div class="input_two_b_2"><input type="number" id="request_weight_big" name="request_weight_big" placeholder="请输入最重体重" required="required" value="{$request['request_weight_big']}"/></div>
-</div>
-</div>
-
-
-
-<div id="input_two_style">
-<div class="input_two_a">薪资范围<span>*</span></div>
-<div class="input_two_c">
-<select name="request_salary">
-{loop salarydata() $key $salary}
-<option value="{$salary['salary_id']}" {if $salary['salary_id']==$request['request_salary']}selected="selected"{else}{/if}>{$salary['salary_name']}</option>
-{/loop}
-</select>
-</div>
-</div>
-
-
-
-<div id="input_two_style">
-<div class="input_two_a">学历要求<span>*</span></div>
-<div class="input_two_c">
-<select name="request_education">
-{loop educationdata() $key $education}
-<option value="{$education['education_id']}" {if $education['education_id']==$request['request_education']}selected="selected"{else}{/if}>{$education['education_name']}</option>
-{/loop}
-</select>
-</div>
-</div>
-
-<div id="input_two_style">
-<div class="input_two_a">所在地域<span>*</span></div>
-<div class="input_two_c">
-<select name="request_area">
-{loop areadata() $key $area}
-<option value="{$area['area_id']}" {if $area['area_id']==$request['request_area']}selected="selected"{else}{/if}>{$area['area_name']}</option>
-{/loop}
-</select>
-</div>
-</div>
+        <div id="input_two_style">
+            <div class="input_two_a">体重范围<span>*</span></div>
+            <div class="input_two_b">
+                <div class="input_two_b_1"><input type="number" id="request_weight_small" name="request_weight_small"
+                                                  placeholder="请输入最轻体重" required="required"
+                                                  value="{$request['request_weight_small']}"/></div>
+                <div class="input_two_b_2"><input type="number" id="request_weight_big" name="request_weight_big"
+                                                  placeholder="请输入最重体重" required="required"
+                                                  value="{$request['request_weight_big']}"/></div>
+            </div>
+        </div>
 
 
+        <div id="input_two_style">
+            <div class="input_two_a">薪资范围<span>*</span></div>
+            <div class="input_two_c">
+                <select name="request_salary">
+                    {loop salarydata() $key $salary}
+                    <option value="{$salary['salary_id']}" {if $salary[
+                    'salary_id']==$request['request_salary']}selected="selected"{else}{/if}>{$salary['salary_name']}</option>
+                    {/loop}
+                </select>
+            </div>
+        </div>
 
-<div id="input_one_ok">
-<div class="input_one_ok_a"><input type="submit" name="submit" value="修 改"/></div>
-</div>
 
-<input type="hidden" name="token" value="{$_W['token']}"/>
-</form>
+        <div id="input_two_style">
+            <div class="input_two_a">学历要求<span>*</span></div>
+            <div class="input_two_c">
+                <select name="request_education">
+                    {loop educationdata() $key $education}
+                    <option value="{$education['education_id']}" {if $education[
+                    'education_id']==$request['request_education']}selected="selected"{else}{/if}>{$education['education_name']}</option>
+                    {/loop}
+                </select>
+            </div>
+        </div>
+
+        <div id="input_two_style">
+            <div class="input_two_a">所在地域<span>*</span></div>
+            <div class="input_two_c">
+                <select name="request_area">
+                    {loop areadata() $key $area}
+                    <option value="{$area['area_id']}" {if $area[
+                    'area_id']==$request['request_area']}selected="selected"{else}{/if}>{$area['area_name']}</option>
+                    {/loop}
+                </select>
+            </div>
+        </div>
+
+
+        <div id="input_one_ok">
+            <div class="input_one_ok_a"><input type="submit" name="submit" value="修 改"/></div>
+        </div>
+
+        <input type="hidden" name="token" value="{$_W['token']}"/>
+    </form>
 </div>
 
 {template 'foot'}
