--- a/addons/hulu_like/template/mobile/so.html
+++ b/addons/hulu_like/template/mobile/so.html
@@ -91,29 +91,32 @@
 </div>
 {if !$_GPC['getmore']}
 <div id="user_list_style" class="more_list" style="text-align:center;margin-top: -100px;margin-bottom: 20px;">
-    <div style="text-align:center" class=""><a href="javascript:" onclick="getmore()" style="text-align:center;margin-top: -2000px;font-size: 12px;color: #999;">加载更多<br></a> </div>
+    <div style="text-align:center" class=""><a href="javascript:" onclick="getmore()"
+                                               style="text-align:center;margin-top: -2000px;font-size: 12px;color: #999;">加载更多<br></a>
+    </div>
 </div>
 <script type="text/javascript">
-            var page = 2;
-            function getmore() {
-            var lock = false;
-                    if (lock) return;
+    var page = 2;
+
+    function getmore() {
+        var lock = false;
+        if (lock) return;
+        lock = true;
+        $.post("{php echo $this->createMobileUrl('so');}&sex={$_GPC['sex']}&age={$_GPC['age']}&marry={$_GPC['marry']}&city={$_GPC['city']}&getmore=1",
+            {
+                page: page
+            },
+            function (data) {
+                if (data != '') {
+                    page++;
+                    lock = false;
+                    $("#user_list").append(data);
+                } else {
+                    $(".more_list").hide();
                     lock = true;
-                    $.post("{php echo $this->createMobileUrl('so');}&sex={$_GPC['sex']}&age={$_GPC['age']}&marry={$_GPC['marry']}&city={$_GPC['city']}&getmore=1",
-                    {
-                    page:page
-                    },
-                            function (data) {
-                            if (data != '') {
-                            page++;
-                                    lock = false;
-                                    $("#user_list").append(data);
-                            } else {
-                            $(".more_list").hide();
-                                    lock = true;
-                            }
-                            });
-                    }
+                }
+            });
+    }
 </script>
 {/if}
 
@@ -122,63 +125,67 @@
 {template 'footer'}
 
 <script type="text/javascript">
-    $(document).ready(function(){
-            var a = "{$sex}";
-            var b = "{$age}";
-            var c = "{$marry}";
-    {if empty($city)}
-            var d = 0; 
-    {else}
-            var d = 1; 
-    {/if}
+    $(document).ready(function () {
+        var a = "{$sex}";
+        var b = "{$age}";
+        var c = "{$marry}";
+        {
+            if empty($city)}
+        var d = 0;
+        {else
+        }
+        var d = 1;
+        {
+            /if}
 
             $("#so_one").find(".so_body_style").eq(a).addClass("so_body_style_new");
             $("#so_two").find(".so_body_style").eq(b).addClass("so_body_style_new");
             $("#so_three").find(".so_body_style").eq(c).addClass("so_body_style_new");
             $("#so_four").find(".so_body_style").eq(d).addClass("so_body_style_new");
-            $(".so_banner_style").click(function(){
-            var h = $(this).index();
-            //
-            if ($("#so_body").children().eq(h).is(":hidden")){
+            $(".so_banner_style").click(function () {
+                var h = $(this).index();
+                //
+                if ($("#so_body").children().eq(h).is(":hidden")) {
                     $("#so_body").children().not(h).hide();
                     $("#so_body").children().eq(h).show();
                     $(this).siblings().removeClass("so_banner_new");
                     $(this).addClass("so_banner_new");
-            } else if ($("#so_body").children().eq(h).is(":visible")){
+                } else if ($("#so_body").children().eq(h).is(":visible")) {
                     $("#so_body").children().hide();
                     $(".so_banner_style").removeClass("so_banner_new");
-            }
-    //
-    });
-            });</script>
+                }
+                //
+            });
+        }
+    );</script>
 
 
 <script>
-var slt_p = '';
-var slt_c = '';
-$(".xuanze_city").cityPicker({
-    title: "请选择城市",
-    onChange: function (picker, values, displayValues) {
-        return;
-        //console.log(values, displayValues);
-        if (slt_p == values[0] && slt_c == values[1]) {
+    var slt_p = '';
+    var slt_c = '';
+    $(".xuanze_city").cityPicker({
+        title: "请选择城市",
+        onChange: function (picker, values, displayValues) {
             return;
+            //console.log(values, displayValues);
+            if (slt_p == values[0] && slt_c == values[1]) {
+                return;
+            }
+            if (slt_p != values[0]) {
+                $('.col-city div:first').html('<div class="picker-item picker-selected" data-picker-value="">不限</div>' + $('.col-city div:first').html().replace(/picker-selected/, ''));
+            }
+            $('.col-district div:first').html('<div class="picker-item picker-selected" data-picker-value="">不限</div>' + $('.col-district div:first').html().replace(/picker-selected/, ''));
+            // $('.col-district div:first').prepend('<div class="picker-item picker-selected" data-picker-value="0">不限</div>');
+            slt_p = values[0];
+            slt_c = values[1];
+        },
+        onClose: function (picker, values, displayValues) {
+            var arr = $(".xuanze_city").val();
+            var arr = arr.split(" ");
+            var s = arr[0] + "|" + arr[1] + "|" + arr[2];
+            var link = "./index.php?i={$_W['uniacid']}&c=entry&sex={$sex}&age={$age}&marry={$marry}&city=" + s + "&do=so&m=hulu_like";
+            window.location.href = link;
         }
-        if (slt_p != values[0]) {
-            $('.col-city div:first').html('<div class="picker-item picker-selected" data-picker-value="">不限</div>' + $('.col-city div:first').html().replace(/picker-selected/, ''));
-        }
-        $('.col-district div:first').html('<div class="picker-item picker-selected" data-picker-value="">不限</div>' + $('.col-district div:first').html().replace(/picker-selected/, ''));
-       // $('.col-district div:first').prepend('<div class="picker-item picker-selected" data-picker-value="0">不限</div>');
-        slt_p = values[0];
-        slt_c = values[1];       
-    },
-    onClose:function(picker, values, displayValues){
-        var arr = $(".xuanze_city").val();
-        var arr = arr.split(" ");
-        var s = arr[0] + "|" + arr[1] + "|" + arr[2];
-        var link = "./index.php?i={$_W['uniacid']}&c=entry&sex={$sex}&age={$age}&marry={$marry}&city=" + s + "&do=so&m=hulu_like";
-        window.location.href = link;
-    }
 
-});
+    });
 </script>
